2006-11-17 [wwp]	0.7.0cvs4

	* src/feed.c
		Fix my previous commit, missing an #include to defs.

2006-11-17 [wwp]	0.7.0cvs3

	* src/feed.c
		Don't use a hardcoded plugin URI as it's in defs.

2006-11-08 [paul]	0.7.0cvs2

	* src/feed.c
	* src/rssyl.h
		update Claws Mail url

2006-11-07 [paul]	0.7.0cvs1

	* COPYING
	* ChangeLog
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/feed.c
	* src/plugin.c
	* src/rssyl_cb_menu.c
		Name change

2006-11-07 [paul]	0.7.0

	0.7 released

2006-11-07 [paul]	0.6.1cvs8

	* po/de.po
	* po/fr.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Stephan Sachse, Fabien Vantard,
		Andrea Spadaccini, Frederico Goncalves Guimaraes,
		Andrej Kacian, and Ralgh Young

2006-10-31 [ticho]	0.6.1cvs7

	* src/feed.c
		Set CURLOPT_MUTE if curl is older than 7.16.0.

2006-10-31 [colin]	0.6.1cvs6

	* src/feed.c
		Fix bug 1047, 'CURLOPT_MUTE removed in
		libcurl 7.16.0' (it was deprecated)

2006-10-10 [colin]	0.6.1cvs5

	* src/date.c
	* src/date.h
	* src/feed.c
	* src/parsers.c
		Get rid of parseRFC822Date() (from liferea, slow)
		and use procheader_date_parse() instead.

2006-10-05 [ticho]	0.6.1cvs4

	* src/feed.c
		Fix for gcc2.x. Spotted by <c0rn at o2.pl>.

2006-10-04 [wwp]	0.6.1cvs3

	* src/rssyl_prefs.c
		Remove label's trailing ':' in prefs. Suggested by
		Fabien Vantard <fzzzzz@gmail.com>.

2006-09-28 [colin]	0.6.1cvs2

	* src/feed.c
		Get rid of g_strsplit and g_strconcat in 
		potentially big items, and in while loops.
		Use zero-copy for the split, and realloc
		for the concatenation. 40% less CPU usage 
		than previously. Valgrinded, Callgrinded.

2006-09-28 [colin]	0.6.1cvs1

	* src/strreplace.c
		Optimize rssyl_strreplace(). strncat is slow because it
		has to walk to the end of the string each time it's called.
		It's called 330.000 times when refreshing a 300 items feed,
		thus making a nice O(n^2) algo.