@@ -54,3 +54,4 @@
 ( cvs diff -u -r 1.1.2.59 -r 1.1.2.60 src/feed.c;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/rssyl.h;  ) > 0.7.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.60 -r 1.1.2.61 src/feed.c;  ) > 0.7.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.61 -r 1.1.2.62 src/feed.c;  ) > 0.7.0cvs4.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 debian/README.Debian;  cvs diff -u -r 1.1.2.62 -r 1.1.2.63 src/feed.c;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/plugin.c;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/rssyl.c;  cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/rssyl_gtk.c;  ) > 0.7.0cvs5.patchset
