@@ -25,7 +25,7 @@
 #endif
 
 #include <common/version.h>
-#include <sylpheed.h>
+#include <claws.h>
 #include <curl/curl.h>
 
 #include "gettext.h"
@@ -38,12 +38,12 @@ gint plugin_init(gchar **error)
 	bindtextdomain(TEXTDOMAIN, LOCALEDIR);
 	bind_textdomain_codeset(TEXTDOMAIN, "UTF-8");
 
-	if( sylpheed_get_version() > VERSION_NUMERIC ) {
+	if( claws_get_version() > VERSION_NUMERIC ) {
 		*error = g_strdup(_("Your version of Claws Mail is newer than the version RSSyl was built with."));
 		return -1;
 	}
 
-	if( sylpheed_get_version() < MAKE_NUMERIC_VERSION(2, 0, 0, 94) ) {
+	if( claws_get_version() < MAKE_NUMERIC_VERSION(2, 0, 0, 94) ) {
 		*error = g_strdup(_("Your version of Claws Mail is too old for RSSyl."));
 		return -1;
 	}
