@@ -1,3 +1,12 @@
+2006-11-27 [paul]	0.7.0cvs5
+
+	* debian/README.Debian
+	* src/feed.c
+	* src/plugin.c
+	* src/rssyl.c
+	* src/rssyl_gtk.c
+		renaming
+
 2006-11-17 [wwp]	0.7.0cvs4
 
 	* src/feed.c
